--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-  "python.pythonPath": "C:\\Python39\\python.exe",
+  "python.pythonPath": "C:\\Users\\ishak\\AppData\\Local\\Programs\\Python\\Python39\\python.exe",
   "python.linting.pylintEnabled": false,
   "python.linting.enabled": true,
   "python.linting.mypyEnabled": true
