--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
-  "python.pythonPath": "C:\\Users\\ishak\\AppData\\Local\\Programs\\Python\\Python39\\python.exe",
-  "python.linting.pylintEnabled": false,
+  "python.pythonPath": "C:\\Python39\\python.exe",
+  "python.linting.pylintEnabled": true,
   "python.linting.enabled": true,
-  "python.linting.mypyEnabled": true
+  "python.linting.mypyEnabled": false
 }
