--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-  "python.pythonPath": "C:\\Python39\\python.exe",
+  "python.pythonPath": "C:\\Users\\User\\.virtualenvs\\6-PPI-LhZODDp6\\Scripts\\python.exe",
   "python.linting.pylintEnabled": true,
   "python.linting.enabled": true,
   "python.linting.mypyEnabled": false
