--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-  "python.pythonPath": "C:\\Users\\User\\.virtualenvs\\8-_Popular_Python_Packages_(Cool)-93AEOSDu\\Scripts\\python.exe",
+  "python.pythonPath": "C:\\Users\\User\\.virtualenvs\\8-Popular-Py-Packages-Cool-Ones-bEYT7bol\\Scripts\\python.exe",
   "python.linting.pylintEnabled": true,
   "python.linting.enabled": true,
   "python.linting.mypyEnabled": false
